# sdm-cli

./: README.md  pyproject.toml
sdm_cli/: constants.py  main.py
