[tool.poetry]
name = "sdm-cli"
version = "0.1.0"
description = ""
authors = ["maxiee <maxieewong@gmail.com>"]
readme = "README.md"
packages = [{include = "sdm_cli"}]

[tool.poetry.dependencies]
python = "^3.10"
fire = "^0.4.0"
akshare = "^1.7.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
main = "sdm_cli.main:main"